manifests/cv/cv.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv
  namespace: cv
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: web
    name: web
  selector:
    app: cv
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv
  namespace: cv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cv
  template:
    metadata:
      labels:
        app: cv
    spec:
      imagePullSecrets:
        - name: docker-config
      containers:
      - name: web
        image: docker.cluster.fun/private/cv:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: web
        resources:
          limits:
            memory: 10Mi
          requests:
            memory: 10Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv
  namespace: cv
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
  - hosts:
    - cv.marcusnoble.co.uk
    secretName: cv-ingress
  rules:
  - host: cv.marcusnoble.co.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: cv
            port:
              number: 80
